# GithubReposToRag

./: .coveragerc  .dockerignore  Makefile  README.md  coverage.xml  environment-ingest.yml  environment-rest-api.yaml  environment-rest-api.yml  environment-scripts.yml  environment-service.yaml  environment-service.yml  environment-worker.yaml  nuclear-reset.ps1  rebuild.ps1  start.ps1
.github/workflows/: tests.yaml
cassandra/: schema.cql
frontend/nextjs-app/: Dockerfile  package-lock.json  package.json
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  cassandra-init-configmap.yaml  cassandra-init-scripts.yaml  cassandra-initdb-configmap.yaml  cassandra-service.yaml  cassandra-statefulset.yaml  github-config-configmap.yaml  ingest-job.yaml  nextjs-deployment.yaml  nextjs-service.yaml  qwen-service.yaml  (+6 more)
ingest/: Dockerfile  pyproject.toml
rag_shared/: bus.py  config.py  models.py
rag_worker/: Dockerfile  pyproject.toml  worker.py
rag_worker/engine/: cassandra_store.py  qwen_llm.py  rag_service.py  router_service.py
rag_worker/src/worker/: worker.py
rag_worker/src/worker/services/: agent_graph.py  cassandra_store.py  graph_rag_retrievers.py  qwen_llm.py  rag_engine.py  router_service.py
rag_worker/tests/: __init__.py  conftest.py  test_worker.py
rag_worker/tests/services/: __init__.py  test_cassandra_store.py  test_qwen_llm.py  test_rag_engine.py  test_router_service.py
rest_api/: Dockerfile
scripts/: Dockerfile  ingest_pos.py  ingest_repos.py  jupyter_notebook_handling.py  langauge_detector.py  repo_summarizer.py
service/: main.py
(+41 files in other folders)
